--- a/css/side-menu.css
+++ b/css/side-menu.css
@@ -1,14 +1,21 @@
-
+.side-menu-all {
+    height: 100%;
+    width: 375px;
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%);
+    visibility: hidden;
+    z-index: 4;
+}
 
 .side-menu {
     position: absolute;
     right: 0;
-    width: 0px;
+    width: 0;
     height: 100%;
     background-color: #ffffff;
-    z-index: 5;
+    z-index: 6;
     transition: width 1s;
-    
 }
 
 .side-menu h4 {
@@ -26,10 +33,10 @@
 .side-menu-background {
     position: absolute;
     right: 0;
-    width: 0px;
+    width: 0;
     height: 100%;
-    background-color: rgb(0, 0, 0, 0.6);
-    z-index: 4;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 5;
     transition: width 1s;
    
 }
