--- a/css/side-menu.css
+++ b/css/side-menu.css
@@ -21,13 +21,25 @@
 .side-menu h4 {
     width: 259px;
     height: 84px;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 16px;
     line-height: 19px;
+}
+
+#userChoice {
+    position: absolute;
+    top: 0;
+    padding: 0 20px;
     display: flex;
     align-items: center;
     text-align: center;
-    padding: 0 20px;
+}
+#visibilityChoice {
+    position: absolute;
+    top: 199px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .side-menu-background {
@@ -38,5 +50,57 @@
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 5;
     transition: width 1s;
-   
+}
+
+.online-users {
+    position: absolute;
+    top: 84px;
+    width: 100%;
+    height: 114px;
+    overflow: scroll;
+}
+.online-user {
+    width: 100%;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 1px;
+}
+.online-user img {
+    position: absolute;
+    left: 17px;
+    height: 25px;
+    width: 25px;
+}
+.online-user p {
+    position: absolute;
+    left: 49px;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.visibility {
+    position: inherit;
+    top: 265px;
+    width: 100%;
+    height: 72px;
+}
+.visibility-option {
+    width: 100%;
+    height: 36px;
+    display: flex;
+    align-items: center;
+}
+.visibility-option img {
+    position: absolute;
+    left: 17px;
+    height: 25px;
+    width: 25px;
+}
+.visibility-option p {
+    position: absolute;
+    left: 49px;
+    font-size: 16px;
+    line-height: 19px;
+}
 }
