--- a/css/footer.css
+++ b/css/footer.css
@@ -9,8 +9,9 @@ footer {
     box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
     z-index: 3;
 }
+
 footer input {
-    position: absolute ;
+    position: absolute;
     left: 17px;
     top: 25px;
     width: 250px;
@@ -18,7 +19,7 @@ footer input {
     border: none;
 }
 
-footer input::placeholder{
+footer input::placeholder {
     color: #000000;
     font-style: italic;
     font-weight: 700;
@@ -29,4 +30,14 @@ footer img {
     top: 27px;
     right: 27px;
     font-size: 26px;
+}
+.recipient {
+    position: fixed;
+    top: 60px;
+    left: 17px;
+}
+.recipient p {
+    font-weight: 300;
+    color: #868686;
+    font-size: 13px;
 }
